# package-python-ipfy-asset-management-pdf-to-table

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/: workflow.yaml
.github/workflows/: workflow.yaml
ipfy_asset_management_pdf_to_table/: __init__.py  _textract_zip_process.py  manual_process.ipynb
tests/: test_textract_zip_process.py
